[tool.poetry]
name = "api-todo"
version = "0.1.0"
description = "A simple todo list API"
authors = ["61246880 <jorge.plautz@gmail.com>"]
license = "GPLV3+"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
