[tool.poetry]
name = "api-todo"
version = "0.1.0"
description = "A simple todo list API"
authors = ["61246880 <jorge.plautz@gmail.com>"]
license = "GPLV3+"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "api/tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
